# game-engine

./: .gitignore  CMakeLists.txt  GameEngine  README.md  compile_commands.json
.zed/: settings.json
documentation/: inherritance.md
include/engine/io/: Files.h
include/engine/math/: octree.h  transform.h  transformation.h
include/engine/renderer/: drawable.h  renderer.h  scene.h  shader.h  vbo.h  window.h
include/engine/renderer/culling/: frustum.h
include/engine/renderer/models/: mesh.h  model.h
include/engine/util/: result.h
include/engine/world/: world.h
include/engine/world/entity/: entity.h  player.h
include/stb/: stb_image.h
scripts/: build.sh
shaders/: 3d_frag.glsl  3d_vert.glsl  skybox_frag.glsl  skybox_vert.glsl  terrain_frag.glsl  terrain_vert.glsl  world_rendering_frag.glsl  world_rendering_vert.glsl
src/: main.cpp
src/io/: Files.cpp  Files.h
src/math/: OcTree.cpp  OcTree.h  QuadTree.cpp  QuadTree.h
src/rendering/: Drawable.h  Frustum.cpp  Renderer.cpp  Renderer.h  Rendering.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transformation.h  VBO.cpp  VBO.h  renderer.cpp  renderer.h  scene.cpp  shader.cpp  shader.h  texture.cpp  vbo.cpp
src/rendering/culling/: Frustum.cpp  Frustum.h  culling.h  frustum.cpp  occlusion.hpp
src/rendering/font/: DrawableFont.h  TrueType.cpp
src/rendering/model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  mesh.cpp  model.cpp
src/world/: SimplexNoise.cpp  SimplexNoise.h  World.cpp  World.h  WorldObject.cpp  WorldObject.h  noise.cpp  world.cpp
src/world/chunk/: Chunk.cpp  Chunk.h
src/world/entity/: AbstractBody.cpp  Entity.cpp  Entity.h  Player.cpp  Player.h  entity.cpp  entity.h  player.cpp  player.h
